Changed menu logo, added shipping and payment widget on product page, fixed categories on homepage, repaired styles on mobile

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -11,16 +11,21 @@
   border-bottom: 1px solid $gray-light;
   display: flex;
   flex-direction: row;
-  height: 4.5rem;
+  height: 4rem;
   align-items: center;
   position: relative;
   justify-content: center;
+
+  @media (min-width: $small-screen) {
+    height: 6rem;
+  }
 
   &__left {
     flex-basis: calc(50% - 2rem);
 
     @media (min-width: $small-screen) {
       flex-basis: calc(50% - 4rem);
+      height: 100%;
     }
 
     ul {
@@ -56,13 +61,13 @@
     align-self: center;
 
     svg {
-      width: 4rem;
+      width: 6rem;
 
       @media (min-width: $small-screen) {
         width: 6rem;
 
         @if $env == "FASHION4YOU" {
-          width: 100%;
+          width: 12rem;
           padding-top: 1rem;
           padding-bottom: 1rem;
           object-fit: cover;
@@ -83,7 +88,7 @@
       transition: 0.3s;
 
       &:hover {
-        color: $primary;
+        color: $white;
       }
     }
   }
@@ -118,6 +123,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    &--hover {
+      svg {
+        path {
+          fill: $turquoise;
+          @if $env == "FASHION4YOU" {
+            fill: $primary;
+          }
+          @if $env == "CLOTHES4U" {
+            fill: $red;
+          }
+        }
+      }
+    }
   }
 
   &__icon {
@@ -236,10 +255,17 @@
   }
 
   &__nav-dropdown {
-    padding: 0 1.5rem;
+    padding: 2rem;
 
     &--active {
       background-color: $turquoise-light;
+      transition: 0.3s all ease-in-out;
+      @if $env == "FASHION4YOU" {
+        background-color: $primary;
+      }
+      @if $env == "CLOTHES4U" {
+        background-color: $red;
+      }
     }
 
     & > li:first-child {
@@ -272,18 +298,49 @@
         align-self: flex-start;
         margin-left: 2rem;
         position: relative;
-        width: 188px;
 
         // 2nd level name
         > a {
           font-size: $base-font-size;
           position: relative;
           text-transform: uppercase;
-          padding-bottom: 9px;
-          margin-bottom: 3px;
+          margin-bottom: 30px;
+          transition: all 0.3s ease-in-out;
+          max-width: 100%;
+
+          &:hover {
+            color: $primary;
+          }
+
+          &:before {
+            content: "";
+            background: $turquoise;
+            display: block;
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            transition: all 0.3s ease-in-out;
+
+            @if $env == "CLOTHES4U" {
+              background: $red;
+            }
+            @if $env == "FASHION4YOU" {
+              background: $green;
+            }
+          }
+          &:hover {
+            background-position: 0;
+          }
+          &:hover::before {
+            width: 100%;
+          }
         }
         > ul > li:first-child {
           position: relative;
+          padding-top: 20px;
+          width: 100%;
 
           &:before {
             background-color: $turquoise-light;
@@ -291,8 +348,10 @@
             height: 1px;
             left: 0;
             position: absolute;
-            top: -3px;
+            top: -6px;
             width: 100%;
+            bottom: -5px;
+            transition: all 0.3s ease-in-out;
           }
         }
 
@@ -303,6 +362,37 @@
             font-weight: normal;
             padding: 6px 0;
             text-transform: capitalize;
+            transition: all 0.3s ease-in-out;
+            max-width: 100%;
+
+            &:hover {
+              color: $primary;
+            }
+
+            &:before {
+              content: "";
+              background: $turquoise;
+              display: block;
+              position: absolute;
+              bottom: -5px;
+              left: 0;
+              width: 0;
+              height: 2px;
+              transition: all 0.3s ease-in-out;
+
+              @if $env == "CLOTHES4U" {
+                background: $red;
+              }
+              @if $env == "FASHION4YOU" {
+                background: $green;
+              }
+            }
+            &:hover {
+              background-position: 0;
+            }
+            &:hover::before {
+              width: 100%;
+            }
           }
 
           li > ul {
