--- a/src/components/MobileNav/scss/index.scss
+++ b/src/components/MobileNav/scss/index.scss
@@ -1,6 +1,5 @@
 @import "../../../globalStyles/scss/variables.scss";
 
-
 .side-nav {
   $item-height: 3.7rem;
   max-width: calc(100vw - 5rem);
@@ -44,6 +43,12 @@
 
       &:hover {
         color: $turquoise;
+        @if $env == "FASHION4YOU" {
+          color: $primary;
+        }
+        @if $env == "CLOTHES4U" {
+          color: $red;
+        }
       }
 
       svg * {
