--- a/src/views/Home/scss/index.scss
+++ b/src/views/Home/scss/index.scss
@@ -90,18 +90,34 @@
     }
 
     &__list {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      flex-wrap: wrap;
+      gap: 2rem;
 
       @media only screen and (min-width: $small-screen) and (max-width: $x-large-screen) {
-        grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(229px, 1fr));
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 2rem;
       }
 
       @media (min-width: 1281px) {
         grid-template-columns: repeat(5, 1fr);
         grid-gap: 2rem;
+
+        @if $env == "FASHION4YOU" {
+          gap: 2rem;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          flex-direction: row;
+          flex-wrap: nowrap;
+        }
       }
 
       .home-page__category-item {
@@ -162,4 +178,8 @@
       }
     }
   }
+}
+
+.no-display-category {
+  display: none;
 }
